Update to Java 20